Homepage h3 use spacing hack so clicking "Download" scrolls correctly

--- a/wiki/.vuepress/styles/index.styl
+++ b/wiki/.vuepress/styles/index.styl
@@ -27,6 +27,7 @@ body {
     }
     &.header-anchor {
       border-bottom-width: 0;
+      display: none;
     }
   }
 
@@ -333,8 +334,18 @@ body {
     padding-top: .625rem;
     margin: 2.5rem 0 1.25rem 0;
   }
-  h3.change-date {
+  h3.visible {
     margin-top: 0;
+
+    a {
+      color: inherit;
+      font-weight: inherit;
+    
+      &:hover {
+        color: inherit;
+        border-bottom: none;
+      }
+    }
   }
   h4 {
     margin: 0 0 .25rem 0;
